support syntax with file as FPC Cleanup code